Configuration with AWS